[package]
name = "ftzz"
version = "3.0.0"
authors = ["Alex Saveau <saveau.alexandre@gmail.com>"]
edition = "2021"
description = "File Tree Fuzzer creates a pseudo-random directory hierarchy filled with some number of files."
repository = "https://github.com/SUPERCILEX/ftzz"
keywords = ["tools", "files", "fuzz"]
categories = ["command-line-utilities", "development-tools", "development-tools::testing", "filesystem"]
license = "Apache-2.0"

[dependencies]
bon = "1.0.6"
bytesize = "1.3.0"
cfg-if = "1.0.0"
clap = { version = "4.5.9", features = ["derive", "wrap_help"] }
clap-num = "1.1.1"
clap-verbosity-flag = { package = "clap-verbosity-flag2", version = "2.1.1" }
env_logger = { version = "0.11.3", default-features = false, features = ["auto-color"] }
error-stack = { version = "0.5.0", default-features = false, features = ["std"] }
io-adapters = "0.3.0"
itoa = "1.0.11"
log = { version = "0.4.22", features = ["release_max_level_info"] }
rand = { version = "0.8.5", default-features = false, features = ["std"] }
rand_distr = "0.4.3"
rand_xoshiro = "0.6.0"
sysexits = "0.8.1"
thiserror = "1.0.62"
thousands = "0.2.0"
tokio = { version = "1.38.0", features = ["rt"] }
tracing = { version = "0.1.40", features = ["log"], optional = true }
tracing-log = { version = "0.2.0", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }
tracing-tracy = { version = "0.11.0", features = ["flush-on-exit"], optional = true }
tracy-client = { version = "0.17.0", optional = true }

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38.34", features = ["fs", "thread"] }

[dev-dependencies]
criterion = "0.5.1"
expect-test = "1.5.0"
more-asserts = "0.3.1"
rand = "0.8.5"
rstest = { version = "0.21.0", default-features = false }
supercilex-tests = "0.4.6"
tempfile = "3.10.1"
trycmd = "0.15.4"

[build-dependencies]
itoa = "1.0.11"

[features]
trace = ["tracing", "dep:tracing-log", "dep:tracing-subscriber", "dep:tracing-tracy", "dep:tracy-client"]
dry_run = []

[[bench]]
name = "generator"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dr]
inherits = "release"
debug = true
debug-assertions = true
strip = false
